apps/radarr/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: radarr
  labels:
    app.kubernetes.io/name: radarr
